--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10,7 +10,7 @@ body {
   font-size: 5.75rem;
 }
 .display-2 {
-  font-family: 'Epilogue', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 3rem;
   line-height: 1.1;
 }
@@ -26,7 +26,7 @@ body {
   font-size: 1.25rem;
 }
 .display-5 {
-  font-family: 'Epilogue', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 1.8rem;
   line-height: 1.5;
 }
@@ -34,12 +34,12 @@ body {
   font-size: 2.25rem;
 }
 .display-7 {
-  font-family: 'Epilogue', sans-serif;
-  font-size: 1.1rem;
+  font-family: 'Jost', sans-serif;
+  font-size: 1.2rem;
   line-height: 1.5;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.375rem;
+  font-size: 1.5rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -73,9 +73,9 @@ body {
     line-height: calc( 1.4 * (1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
-    font-size: 0.88rem;
-    font-size: calc( 1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.96rem;
+    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -1324,443 +1324,88 @@ a {
 .cid-sFGJsyrALx .position {
   color: #bbbbbb;
 }
-.cid-sFGDg6hy8z {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #232323;
+.cid-tjnlF49WZO {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #9ee198;
 }
-.cid-sFGDg6hy8z .social-row {
-  display: flex;
-  flex-wrap: wrap;
+.cid-tjnlF49WZO .mbr-section-title {
+  color: #353535;
 }
-.cid-sFGDg6hy8z .soc-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  background-color: white;
-  margin-right: 0.5rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  height: 2.5rem;
-  width: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-sFGDg6hy8z .row {
-    text-align: center;
-  }
-  .cid-sFGDg6hy8z .social-row {
-    justify-content: center;
-  }
-}
-.cid-sFGDg6hy8z .list {
-  list-style: none;
-  padding-left: 0;
-  color: #bbbbbb;
+.cid-tjnmzs5Q8U {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #9ee198;
 }
 @media (max-width: 991px) {
-  .cid-sFGDg6hy8z .list {
-    margin-bottom: 2rem;
+  .cid-tjnmzs5Q8U .image-wrapper {
+    margin-bottom: 1rem;
   }
+}
+.cid-tjnmzs5Q8U img {
+  width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-sFGDg6hy8z .list {
-    margin-bottom: 0rem;
+  .cid-tjnmzs5Q8U .text-wrapper {
+    padding: 2rem;
   }
 }
-.cid-sFGDg6hy8z .mbr-text {
-  color: #bbbbbb;
+.cid-tjnmzs5Q8U .mbr-text {
+  text-align: left;
 }
-.cid-sFGDg6hy8z .mbr-iconfont {
-  color: black;
+.cid-tjnDvn8DK1 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #b0e9ab;
 }
-.cid-sFGzlAXw3z .navbar-dropdown {
-  position: relative !important;
+.cid-tjnoRt17p8 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #9ee198;
 }
-.cid-sFGzlAXw3z .dropdown-item:before {
-  font-family: Moririse2 !important;
-  content: "\e966";
-  display: inline-block;
-  width: 0;
-  position: absolute;
-  left: 1rem;
-  top: 0.5rem;
-  margin-right: 0.5rem;
-  line-height: 1;
-  font-size: inherit;
-  vertical-align: middle;
-  text-align: center;
+.cid-tjny4wwDoI {
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  background-color: #b0e9ab;
+}
+.cid-tjny4wwDoI .image-wrapper {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-right: 1rem;
   overflow: hidden;
-  transform: scale(0, 1);
-  transition: all 0.25s ease-in-out;
 }
-.cid-sFGzlAXw3z .dropdown-menu {
-  padding: 0;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-}
-.cid-sFGzlAXw3z .dropdown-item {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-sFGzlAXw3z .dropdown-item:hover,
-.cid-sFGzlAXw3z .dropdown-item:focus {
-  background: #c37a7a !important;
-  color: white !important;
-}
-.cid-sFGzlAXw3z .dropdown-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.cid-sFGzlAXw3z .dropdown-item:last-child {
-  border-bottom: none;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.cid-sFGzlAXw3z .nav-dropdown .link {
-  padding: 0 0.3em !important;
-  margin: 0.667em 1em !important;
-}
-.cid-sFGzlAXw3z .nav-dropdown .link.dropdown-toggle::after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-}
-.cid-sFGzlAXw3z .nav-link {
-  position: relative;
-}
-.cid-sFGzlAXw3z .container {
-  display: flex;
-  margin: auto;
-}
-.cid-sFGzlAXw3z .iconfont-wrapper {
-  color: #000000 !important;
-  font-size: 1.5rem;
-  padding-right: 0.5rem;
-}
-.cid-sFGzlAXw3z .dropdown-menu,
-.cid-sFGzlAXw3z .navbar.opened {
-  background: #353535 !important;
-}
-.cid-sFGzlAXw3z .nav-item:focus,
-.cid-sFGzlAXw3z .nav-link:focus {
-  outline: none;
-}
-.cid-sFGzlAXw3z .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  transition: all 0.25s ease-in-out;
-}
-.cid-sFGzlAXw3z .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-sFGzlAXw3z .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-right: 0.5rem;
-  vertical-align: sub;
-}
-.cid-sFGzlAXw3z .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  transform: scale(1, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-sFGzlAXw3z .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-sFGzlAXw3z .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.235em 1.5em 0.235em 1.5em !important;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-sFGzlAXw3z .navbar {
-  min-height: 70px;
-  transition: all 0.3s;
-  border-bottom: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #353535;
-}
-.cid-sFGzlAXw3z .navbar.opened {
-  transition: all 0.3s;
-}
-.cid-sFGzlAXw3z .navbar .dropdown-item {
-  padding: 0.5rem 1.8rem;
-}
-.cid-sFGzlAXw3z .navbar .navbar-logo img {
-  width: auto;
-}
-.cid-sFGzlAXw3z .navbar .navbar-collapse {
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-sFGzlAXw3z .navbar.collapsed {
-  justify-content: center;
-}
-.cid-sFGzlAXw3z .navbar.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-sFGzlAXw3z .navbar.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-.cid-sFGzlAXw3z .navbar.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-sFGzlAXw3z .navbar.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-sFGzlAXw3z .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 41%;
-}
-.cid-sFGzlAXw3z .navbar.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-sFGzlAXw3z .navbar.collapsed .dropdown-menu .dropdown-item {
-  padding: 0.25rem 1.5rem;
-  text-align: center;
-}
-.cid-sFGzlAXw3z .navbar.collapsed .icons-menu {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-@media (max-width: 991px) {
-  .cid-sFGzlAXw3z .navbar .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-sFGzlAXw3z .navbar.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-sFGzlAXw3z .navbar .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-sFGzlAXw3z .navbar .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-sFGzlAXw3z .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 40%;
-  }
-  .cid-sFGzlAXw3z .navbar .navbar-logo img {
-    height: 3rem !important;
-  }
-  .cid-sFGzlAXw3z .navbar ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-sFGzlAXw3z .navbar .dropdown-menu .dropdown-item {
-    padding: 0.25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-sFGzlAXw3z .navbar .navbar-brand {
-    flex-shrink: initial;
-    flex-basis: auto;
-    word-break: break-word;
-    padding-right: 2rem;
-  }
-  .cid-sFGzlAXw3z .navbar .navbar-toggler {
-    flex-basis: auto;
-  }
-  .cid-sFGzlAXw3z .navbar .icons-menu {
-    padding-left: 0;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-}
-.cid-sFGzlAXw3z .navbar.navbar-short {
-  min-height: 60px;
-}
-.cid-sFGzlAXw3z .navbar.navbar-short .navbar-logo img {
-  height: 2.5rem !important;
-}
-.cid-sFGzlAXw3z .navbar.navbar-short .navbar-brand {
-  min-height: 60px;
-  padding: 0;
-}
-.cid-sFGzlAXw3z .navbar-brand {
-  min-height: 70px;
-  flex-shrink: 0;
-  align-items: center;
-  margin-right: 0;
-  padding: 10px 0;
-  transition: all 0.3s;
-  word-break: break-word;
-  z-index: 1;
-}
-.cid-sFGzlAXw3z .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-sFGzlAXw3z .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-sFGzlAXw3z .dropdown-item.active,
-.cid-sFGzlAXw3z .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-sFGzlAXw3z .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 0;
-}
-.cid-sFGzlAXw3z .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-sFGzlAXw3z .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-sFGzlAXw3z .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #353535;
-}
-.cid-sFGzlAXw3z .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-sFGzlAXw3z .navbar .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-sFGzlAXw3z ul.navbar-nav {
-  flex-wrap: wrap;
-}
-.cid-sFGzlAXw3z .navbar-buttons {
-  text-align: center;
-  min-width: 170px;
-}
-.cid-sFGzlAXw3z button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  transition: all 0.2s;
-  position: relative;
-  align-self: center;
-}
-.cid-sFGzlAXw3z button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #ffffff;
-}
-.cid-sFGzlAXw3z button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all 0.2s;
-}
-.cid-sFGzlAXw3z button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all 0.15s;
-}
-.cid-sFGzlAXw3z button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all 0.15s;
-}
-.cid-sFGzlAXw3z button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all 0.2s;
-}
-.cid-sFGzlAXw3z nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all 0.2s;
-}
-.cid-sFGzlAXw3z nav.opened .hamburger span:nth-child(2) {
-  transform: rotate(45deg);
-  transition: all 0.25s;
-}
-.cid-sFGzlAXw3z nav.opened .hamburger span:nth-child(3) {
-  transform: rotate(-45deg);
-  transition: all 0.25s;
-}
-.cid-sFGzlAXw3z nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all 0.2s;
-}
-.cid-sFGzlAXw3z .navbar-dropdown {
-  padding: 0 1rem;
-}
-.cid-sFGzlAXw3z a.nav-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.cid-sFGzlAXw3z .icons-menu {
-  flex-wrap: nowrap;
-  display: flex;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.3rem;
-  text-align: center;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-sFGzlAXw3z .navbar {
-    height: 70px;
-  }
-  .cid-sFGzlAXw3z .navbar.opened {
-    height: auto;
-  }
-  .cid-sFGzlAXw3z .nav-item .nav-link:hover::before {
-    width: 175%;
-    max-width: calc(100% + 2rem);
-    left: -1rem;
-  }
-}
-.cid-sFGDg6hy8z {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #232323;
-}
-.cid-sFGDg6hy8z .social-row {
-  display: flex;
-  flex-wrap: wrap;
-}
-.cid-sFGDg6hy8z .soc-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.cid-tjny4wwDoI .image-wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.cid-tjnAnB2TNw {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #b0e9ab;
+}
+.cid-tjnAnB2TNw .image-wrapper {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  background-color: white;
-  margin-right: 0.5rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  height: 2.5rem;
-  width: 2.5rem;
+  margin-top: 5px;
+  margin-right: 1rem;
+  overflow: hidden;
 }
-@media (max-width: 767px) {
-  .cid-sFGDg6hy8z .row {
-    text-align: center;
-  }
-  .cid-sFGDg6hy8z .social-row {
-    justify-content: center;
-  }
+.cid-tjnAnB2TNw .image-wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
-.cid-sFGDg6hy8z .list {
-  list-style: none;
-  padding-left: 0;
-  color: #bbbbbb;
+.cid-tjnBq62XUE {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  background-color: #9ee198;
 }
-@media (max-width: 991px) {
-  .cid-sFGDg6hy8z .list {
-    margin-bottom: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sFGDg6hy8z .list {
-    margin-bottom: 0rem;
-  }
-}
-.cid-sFGDg6hy8z .mbr-text {
-  color: #bbbbbb;
-}
-.cid-sFGDg6hy8z .mbr-iconfont {
-  color: black;
+.cid-tjnDcHCpFG {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #b0e9ab;
 }
